SFDC_Learning/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Revenue__c</fullName>
        <formula>IF (AND (AnnualRevenue &gt; 10000000,
CONTAINS (CASE (BillingCountry, &quot;United States&quot;, &quot;US&quot;, &quot;America&quot;, &quot;US&quot;,
&quot;USA&quot;, &quot;US&quot;, &quot;NA&quot;), &quot;US&quot;)),
IF(ISPICKVAL(Type, &quot;Manufacturing Partner&quot;), &quot;Hot&quot;,
IF(OR (ISPICKVAL (Type, &quot;Channel Partner/Reseller&quot;),
ISPICKVAL(Type, &quot;Installation Partner&quot;)), &quot;Warm&quot;, &quot;Cold&quot;)),
&quot;Cold&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_ID__c</fullName>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <label>Primary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Product_Customer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Product Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Service Customer</description>
        <label>Service Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_acc_field11__c</fullName>
        <label>Test Account Field 11</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_acc_field12__c</fullName>
        <label>Test Account Field 12</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_acc_field__c</fullName>
        <label>Test Account Field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>of_Open_Opportunity__c</fullName>
        <label>#of Open Opportunity</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <description>Those who are already in business with our company</description>
        <label>Client</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <description>Those who are new customers</description>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validate_7_chars_for_Account_Name</fullName>
        <active>false</active>
        <description>Validate_7_chars_for_Account_Name</description>
        <errorConditionFormula>AND( NOT(ISBLANK( Name ) ),LEN(Name)&lt;&gt; 7)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name must be 7</errorMessage>
    </validationRules>
</CustomObject>